# ComputerVisionEmbedded

./: .gitignore  .gitmodules  README.md  stm32hal.patch  zephyr.patch
host/: CMakeLists.txt  HaarPath.hpp.in
host/Src/: main.cpp
u5/: CMakeLists.txt  Kconfig  west.yml
u5/Models/: CMakeLists.txt  Kconfig  common.cmake
u5/Models/mpools/: stm32n6.mpool.in
u5/Models/yolov8_obj_det/: CMakeLists.txt  Kconfig  user_neuralart.json.in
u5/app/: CMakeLists.txt  Kconfig  Kconfig.sample_msc  lvgl.conf  nema.cmake  opencv.cmake  prj.conf  sample.yaml  usbd.conf
u5/app/boards/: grinreflex_dk1.conf  grinreflex_dk1.overlay  grinreflex_dk2.conf  grinreflex_dk2.overlay
u5/app/src/: application.cpp  application.h  cascades.h.in  gfx_utils.cpp  gfx_utils.hpp  grinreflex.cpp  grinreflex.h  grinreflex_config.hpp  grinreflex_utils.cpp  grinreflex_utils.hpp  grinreflex_v2.cpp  lvgl_fs.h  lvgl_fs_sample.c  main.c  opencv_sample.cpp  opencv_sample.h  opencv_utils.cpp  opencv_utils.hpp  sample_usbd.h  uart.cpp  video.cpp
u5/boards/: grinreflex_dk1.overlay  stm32u5g9j_dk2.overlay
u5/common/: CMakeLists.txt
u5/common/include/gf/: lvgl_utils.hpp  uart.hpp  utils.hpp  video.hpp
u5/common/nema/: CMakeLists.txt
u5/common/opencv/: CMakeLists.txt
u5/common/opencv/include/gf/: opencv_pipeline.hpp  opencv_utils.hpp
u5/common/opencv/src/: opencv_pipeline.cpp  opencv_utils.cpp
u5/common/src/: lvgl_utils.cpp  uart.cpp  utils.cpp  video.cpp
u5/drivers/: CMakeLists.txt  Kconfig
u5/drivers/jpeg/: CMakeLists.txt  Kconfig  jpeg.c  jpeg_utils.c  jpeg_utils.h  jpeg_utils_conf.h
u5/drivers/nema/: CMakeLists.txt  Kconfig  nema.c
u5/dts/bindings/jpeg/: st,jpeg-hw.yaml
u5/dts/bindings/nema/: st,nema-gfx.yaml
u5/gf_dkx/: CMakeLists.txt  Kconfig  lvgl.conf  prj.conf
u5/gf_dkx/boards/: grinreflex_dk1.conf  grinreflex_dk1.overlay  grinreflex_dk2.conf  grinreflex_dk2.overlay
u5/gf_dkx/overlays/: release.overlay
u5/gf_dkx/src/: config.hpp  grinreflex.h  lvgl_video_app.cpp  main.c  opencv_fd_app.cpp  opencv_fd_only_app.cpp  version.h.in
u5/gf_n6_dk3/: CMakeLists.txt  prj.conf
u5/gf_n6_dk3/src/: application.cpp  application.h  config.hpp  main.c
u5/gf_n6_npu/: CMakeLists.txt
u5/gf_n6_npu/Model/: .gitignore  generate-n6-model.sh  network.c  network.h  network_ecblobs.h
u5/gf_n6_npu/Model/my_mpools/: stm32n6-app2.mpool
u5/gf_n6_npu/src/: model.c
u5/gf_n6_yolov8/: CMakeLists.txt  prj.conf
u5/gf_n6_yolov8/Model/: generate-n6-model.sh  network.c  network.h  network_ecblobs.h  yolov8n_100e_int8.tflite
u5/gf_n6_yolov8/boards/: grinreflex_n6_dk3_stm32n657xx_app.overlay
u5/gf_n6_yolov8/include/: model.h
u5/gf_n6_yolov8/src/: main.c  model.c
u5/host/: jpeg2uart.py
u5/include/app/drivers/: jpeg.h  nema_gfx.h
u5/include/app/lib/: tflm.h
u5/lib/: CMakeLists.txt  Kconfig
u5/lib/cv/: .gitignore  CMakeLists.txt  Kconfig  opencv.patch  toolchain.cmake
u5/lib/quirc/: CMakeLists.txt  Kconfig
u5/lib/st_ai_runtime/: CMakeLists.txt  Kconfig
u5/lib/st_ai_runtime/Lib/lib_vision_models_pp/lib_vision_models_pp/Inc/: od_yolov8_pp_if.h
u5/lib/st_ai_runtime/Lib/lib_vision_models_pp/lib_vision_models_pp/Src/: od_pp_yolov2.c
u5/lib/tflite/: CMakeLists.txt  Kconfig  tflm.cc  utils.cc  utils.h
u5/lib/tflite/models/: onet.c  pnet_1.c  pnet_2.c  pnet_3.c  rnet.c
u5/patches/: stm32u5g9j_dk2.patch
u5/scripts/: jpg2rgb.py  west-commands.yml  west_flash_weights_command.py
u5/uvc_gf_dk1/: CMakeLists.txt  Kconfig  prj.conf
u5/uvc_gf_dk1/boards/: grinreflex_dk1.overlay
u5/uvc_gf_dk1/src/: main.c
